@@ -6,6 +6,7 @@
   <!-- Only root can own the service -->
   <policy user="root">
     <allow own="org.freedesktop.DisplayManager"/>
+    <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager" send_member="AddSeat"/>
   </policy>
 
   <policy context="default">
@@ -14,6 +15,7 @@
     <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager"/>
     <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager.Seat"/>
     <allow send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager.Session"/>
+    <deny send_destination="org.freedesktop.DisplayManager" send_interface="org.freedesktop.DisplayManager" send_member="AddSeat"/>
   </policy>
 
 </busconfig>
